--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,7 +44,7 @@
 }
 
 body {
-  background-image: url("./background.jpg");
+  background-image: url("../images/background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
