--- a/public/codemirror/codemirror.css
+++ b/public/codemirror/codemirror.css
@@ -46,7 +46,7 @@
 /* CURSOR */
 
 .CodeMirror-cursor {
-  border-left: 1px solid black;
+  border-left: 1px solid orangered;
   border-right: none;
   width: 0;
 }
